--- a/style.css
+++ b/style.css
@@ -33,3 +33,52 @@ body{
     border: solid 3px white;
     border-radius: 50%;
     }
+
+.sección{
+    margin:auto;
+    padding:10px 10px;
+    padding-bottom: 50px;
+    box-shadow:1px 1px 10px chocolate;
+    text-align: center;
+}
+.icons{
+    padding:20px 0 ;
+    color:brown;
+}
+.icons i{
+    margin:0 5px;
+    cursor:pointer;
+}
+.sección p{
+    margin-bottom:10px ;
+    text-align: center;
+    background-color: brown;
+    font-family:"yelowtail";
+}
+.btns{
+padding: 20px 0;
+    cursor:pointer; 
+}
+.contenido{
+    margin: 50px 0px ;
+}
+.contenido h3{
+    color: brown;
+    background-color: blanchedalmond;
+    text-align: center;
+    font-family:monospace;
+}
+footer{
+    position:fixed;
+    bottom:0;
+    background-color: rgb(147, 101, 44);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 50px;
+}
+.textop{
+    background-color: rgb(114, 240, 145);
+    border: 50px 0;
+}
